Fix sex staging input variable name,